--- a/style.css
+++ b/style.css
@@ -45,7 +45,13 @@ h2 {
   display: inline-block;
   padding-bottom: 0.3rem;
 }
-
+.hero h1 {
+  font-size: 2.2rem;
+  margin-bottom: 1rem;
+  border-bottom: 3px solid var(--green);
+  display: inline-block;
+  padding-bottom: 0.4rem;
+}
 .products {
   margin-top: 2rem;
 }
