--- a/style.css
+++ b/style.css
@@ -198,4 +198,11 @@ footer a {
     justify-items: center;
   }
 }
+.name-heading {
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid var(--green);
+  display: inline-block;
+  padding-bottom: 0.3rem;
+}
 
