--- a/style.css
+++ b/style.css
@@ -70,6 +70,25 @@ h2 {
   color: var(--green);
   margin-bottom: 1.8rem;
 }
+.hero-heading {
+  text-align: center;
+}
+
+.brand-name,
+.hero-subtitle {
+  display: block;
+}
+@media (min-width: 768px) {
+  .brand-name {
+    font-size: 3.2rem;
+  }
+
+  .hero-subtitle {
+    font-size: 1.7rem;
+    max-width: 800px;
+    margin: 0 auto 2rem auto;
+  }
+}
 
 .products {
   margin-top: 2rem;
@@ -189,10 +208,7 @@ footer a {
   color: var(--dark);
   transform: scale(1.1);
 }
-.about-image {
-  text-align: center;
-  margin: 3rem auto;
-}
+
 
 .about-photo {
   width: 100%;
